--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && npm run postbuild",
+    "postbuild": "next-sitemap",
     "start": "next start"
   },
   "dependencies": {
@@ -11,6 +12,7 @@
     "dracula-prism": "^2.1.13",
     "material-icons": "^1.13.9",
     "next": "latest",
+    "next-sitemap": "^4.2.3",
     "pretty": "^2.0.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
